--- a/notebooks/[Session 3] Hands-on Exercise - Machine Translation using Transformers.ipynb
+++ b/notebooks/[Session 3] Hands-on Exercise - Machine Translation using Transformers.ipynb
@@ -18,7 +18,8 @@
    },
    "outputs": [],
    "source": [
-    "# ! pip install datasets sacrebleu"
+    "# ! pip install datasets sacrebleu\n",
+    "# ! pip install transformers[torch]"
    ]
   },
   {
