--- a/notebooks/[Session 3] Hands-on Exercise - Introduction to Transformers with HuggingFace.ipynb
+++ b/notebooks/[Session 3] Hands-on Exercise - Introduction to Transformers with HuggingFace.ipynb
@@ -32,8 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install transformers\n",
-    "# !pip install datasets"
+    "# !pip install transformers[torch]"
    ]
   },
   {
