--- a/notebooks/[Session 4] Hands-on Exercise- Introduction_To_TrueFoundry.ipynb
+++ b/notebooks/[Session 4] Hands-on Exercise- Introduction_To_TrueFoundry.ipynb
@@ -43,7 +43,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install mlfoundry servicefoundry transformers datasets transformers[torch] gradio"
+        "!pip install -q mlfoundry servicefoundry transformers datasets transformers[torch] gradio"
       ]
     },
     {
@@ -516,7 +516,7 @@
       "source": [
         "import gradio as gr\n",
         "\n",
-        "gr.Interface(fn=predict, inputs=\"text\", outputs=\"label\").launch()"
+        "gr.Interface(fn=predict, inputs=\"text\", outputs=\"label\").launch(share=True)"
       ]
     }
   ],
