--- a/notebooks/[Session 4] Hands-on Exercise- Introduction_To_TrueFoundry.ipynb
+++ b/notebooks/[Session 4] Hands-on Exercise- Introduction_To_TrueFoundry.ipynb
@@ -29,7 +29,7 @@
       },
       "source": [
         "# 💻 What can you do with TrueFoundry?\n",
-        "1. Deploy a service from code on Github\n",
+        "1. Deploy a service from code on Github (https://github.com/srihari-tf/simple-service)\n",
         "2. Setup a cron job using Python code\n",
         "3. Create an ML repo and store your artifacts\n",
         "4. More Below 👇"
