fix artifact logging

--- a/notebooks/[Session 4] Hands-on Exercise- Introduction_To_TrueFoundry.ipynb
+++ b/notebooks/[Session 4] Hands-on Exercise- Introduction_To_TrueFoundry.ipynb
@@ -438,6 +438,19 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "trainer.save_model('finetuned-model')\n",
+        "run.log_artifact(\n",
+        "    name=\"finetuned-model\",\n",
+        "    artifact_paths=[mlfoundry.ArtifactPath('finetuned-model', '')]\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -448,7 +461,7 @@
       },
       "outputs": [],
       "source": [
-        "run_fqn = input('let us fetch the run fqn from the mlrepo: ')"
+        "artifact_version_fqn = input('let us fetch the artifact version fqn from the mlrepo: ')"
       ]
     },
     {
@@ -459,10 +472,12 @@
       },
       "outputs": [],
       "source": [
-        "from mlfoundry.integrations.transformers import HF_MODEL_PATH\n",
+        "import tempfile\n",
+        "artifact_version = mlf_client.get_artifact_version_by_fqn(fqn=artifact_version_fqn)\n",
         "\n",
-        "run = mlf_client.get_run_by_fqn(run_fqn)\n",
-        "downloaded = run.download_artifact_deprecated(HF_MODEL_PATH)"
+        "# download the model to disk\n",
+        "temp = tempfile.TemporaryDirectory()\n",
+        "downloaded = artifact_version.download(path=temp.name)"
       ]
     },
     {
