--- a/notebooks/part-4-rag.ipynb
+++ b/notebooks/part-4-rag.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0200e33a-8d0f-400a-a59a-4fb03b529442",
+   "metadata": {},
+   "source": [
+    "# Install required libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c0591e29-92ea-4881-8b3f-1995987febdf",
@@ -13,6 +21,14 @@
     "    mwparserfromhell \\\n",
     "    tiktoken \\\n",
     "    langchain openai"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f98e1bfa-6b09-4a20-b2d4-031970215507",
+   "metadata": {},
+   "source": [
+    "# Load dataset"
    ]
   },
   {
@@ -38,6 +54,14 @@
     "import tiktoken\n",
     "\n",
     "tiktoken.encoding_for_model('gpt-3.5-turbo')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93e5c509-10ff-490d-b5c9-43aa36dd4ff3",
+   "metadata": {},
+   "source": [
+    "# Tokenize and split into chunks"
    ]
   },
   {
@@ -92,6 +116,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d83b00b2-c866-4df7-924b-020f5818b571",
+   "metadata": {},
+   "source": [
+    "# Load the OpenAI embedding model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "20d0dc90-7d8f-4b5d-8333-1be809ee2646",
@@ -128,16 +160,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b30388e-ed84-432d-bf76-f815c043acaa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.vectorstores import Qdrant\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "72bfc7ff-c3e3-4218-bc07-66a2dc158265",
    "metadata": {},
    "outputs": [],
@@ -145,6 +167,14 @@
     "from langchain.docstore.document import Document\n",
     "\n",
     "doc =  Document(page_content=\"text\", metadata={\"source\": \"local\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9d317ba-2853-4cd2-b41e-10ffc62905a0",
+   "metadata": {},
+   "source": [
+    "# Create documents to store in VectorDB"
    ]
   },
   {
@@ -179,13 +209,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9522fbb1-4d35-4cd7-be06-b79cbc079398",
+   "metadata": {},
+   "source": [
+    "# Store it in vectorDB"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc6fa18e-cf7b-4bd7-8150-02ac03b94bef",
+   "id": "e8d15b10-7d3f-441d-b256-a9a1d8b11f03",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install qdrant-client"
+    "from qdrant_client import QdrantClient\n",
+    "from langchain.vectorstores import Qdrant"
    ]
   },
   {
@@ -203,13 +242,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "565a2d82-1ee8-4bdd-ad7b-45f97470d8c2",
+   "cell_type": "markdown",
+   "id": "d2b96cda-f028-46d4-a26a-9695c0943b68",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "embed"
+    "# Create QA using Langchain APIs"
    ]
   },
   {
@@ -246,12 +283,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1586ba59-9e8d-4ff7-b765-ef4d7098a4fa",
+   "metadata": {},
+   "source": [
+    "# Productionizing QA - starting with Qdrant"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6943a6ac-4e8e-4214-a548-9cd58fdc9142",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# replace this with your Qdrant URL\n",
+    "# it will be of the form <name-of-deployment>.<workspace-name>.svc.cluster.local\n",
     "qdrant_url = 'qdrant.abhi-test.svc.cluster.local'"
    ]
   },
@@ -305,6 +352,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ccc27000-f85e-47d9-8616-1bfa9a53cc51",
+   "metadata": {},
+   "source": [
+    "# Replace ChatGPT LLM with open-source LLM"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f7dad962-821a-4975-891f-1bac5b67b9d9",
@@ -321,59 +376,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!servicefoundry logout"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf0aa4e2-49c8-483f-9020-b0161d293cc1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.environ['TFY_HOST'] = 'https://avmc.truefoundry.cloud/'\n",
-    "os.environ['TFY_API_KEY'] = ''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d11d9624-a33f-4a8e-8703-16770b4d7b68",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import servicefoundry\n",
-    "servicefoundry.login()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c6afe1f5-381d-44a6-a391-d3e520455498",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from servicefoundry.lib.auth.servicefoundry_session import ServiceFoundrySession"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1926acc4-2a5d-4eb8-91f2-523ab38b6241",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "session = ServiceFoundrySession()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe8468f4-16b0-472b-968b-e95064c6b39d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "session.access_token"
+    "!servicefoundry login --host https://avmc.truefoundry.cloud/"
    ]
   },
   {
@@ -425,20 +428,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ccef151-6ebb-4188-837a-3284b0140c91",
+   "cell_type": "markdown",
+   "id": "4cf72860-6869-49f3-be26-bf8cfd664f02",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from qdrant_client import QdrantClient\n",
-    "from langchain.vectorstores import Qdrant\n",
-    "\n",
-    "client = QdrantClient(host=qdrant_url, port=6333)\n",
-    "qdrant_remote = Qdrant(\n",
-    "    client=client, collection_name=\"my_documents\", \n",
-    "    embeddings=embed,\n",
-    ")"
+    "# Let's create a service\n",
+    "1. Create main.py, requirements.txt\n",
+    "2. Write TFY deployment spec as servicefoundry.yaml\n",
+    "3. Deploy to your workspace"
    ]
   },
   {
@@ -545,7 +542,7 @@
     "  build_spec:\n",
     "    type: tfy-python-buildpack\n",
     "    build_context_path: ./\n",
-    "    command: uvicorn main:app --host 0.0.0.0 --port 8000 --root-path /fastapi-mine/\n",
+    "    command: uvicorn main:app --host 0.0.0.0 --port 8000 --root-path /fastapi-mine/ # replace --root-path with your path\n",
     "    python_version: '3.9'\n",
     "    requirements_path: requirements.txt\n",
     "name: fastapi-app-mine\n",
@@ -554,16 +551,16 @@
     "    port: 8000\n",
     "    protocol: TCP\n",
     "    host: ml.avmc.truefoundry.cloud\n",
-    "    path: /fastapi-mine/\n",
+    "    path: /fastapi-mine/ # replace this with a unique path for your service\n",
     "    app_protocol: http\n",
     "replicas: 1\n",
     "env:\n",
     "  OPENAI_API_KEY: <OPENAI-API-KEY>\n",
-    "  QDRANT_URL: <QDRANT-URL>\n",
-    "  MODEL_NAME: llama-2-7b-chat\n",
-    "  COLLECTION_NAME: my-documents\n",
+    "  QDRANT_URL: <QDRANT-URL> # your qdrant URL\n",
+    "  MODEL_NAME: llama-2-7b-chat # change model name if you deployed something else\n",
+    "  COLLECTION_NAME: my_documents\n",
     "  TFY_HOST: https://avmc.truefoundry.cloud\n",
-    "  TFY_API_KEY: <API-KEY>"
+    "  TFY_API_KEY: <API-KEY> # From TrueFoundry dashboard, go to Settings > API Key to fetch one"
    ]
   },
   {
@@ -573,16 +570,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!servicefoundry deploy --workspace-fqn=tfy-avmc-weeu:abhi-test"
+    "!servicefoundry deploy --workspace-fqn=<YOUR-WORKSPACE-FQN>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a2e5673-9218-440f-932e-bcd4b28f5549",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
