--- a/notebooks/part-3-langchain.ipynb
+++ b/notebooks/part-3-langchain.ipynb
@@ -1206,6 +1206,8 @@
       },
       "outputs": [],
       "source": [
+        "!pip install numexpr",
+        "\n",
         "import inspect\n",
         "import re\n",
         "\n",
